styles/message.css
.message-modal {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  position: fixed;
  top: 50dvh;
  left: 50dvw;
  margin:0;
  padding: 1rem;
  max-width: 80%;
  max-height: 80%;
  width: fit-content;
  height: fit-content;
  background-color: #aaaaaa;
  z-index: 1000;
  border-radius: 15px;
  transform: translate(-50%, -50%);
}

.message-modal-hide {
  display: none;
}

.message-modal-show {
  display: flex;
}

/* Modal Content */

.message-dialog {
  display: flex;
  margin: 0rem;
  width: 100%;
  flex-direction: column;
  justify-content: center;
  align-content: center;
}

.message-text {
  display: flex;
  word-wrap:break-word;
  word-break: break-word;
  align-self: center;
  width: fit-content;
  height: fit-content;
  margin: 0.5rem;
  padding: 0px;
  overflow: auto;
}

.message-div {
  display: grid;
  justify-content: left;
  align-content: center;
  flex-wrap: wrap;
  margin: 0.5rem;
  padding: 0.5rem;
  max-width: 75dvw;
  max-height: 75dvh;
  overflow: auto;
  border: 3px solid black;
  border-radius: 15px;
}


.message-legend {
  font-size: 1.2rem;
  font-weight: bold;
  color: black;
  font-size: 1rem;
  padding: 0;
}

.message-form-fieldset {
  display: flex;
  align-self: center;
  width: fit-content;
  height: fit-content;
  margin-top: 0.25rem;
  margin-bottom: 1rem;
  padding: 0.5rem;
  vertical-align: top;
  border: 2px solid black;
  border-radius: 6px;
}



.message-button-bar {
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: space-evenly;
  align-content: center;
  flex-wrap: wrap;
  grid-gap: 1rem;
  /* width: fit-content; */
  color: #aaaaaa;
  background-color: #aaaaaa;
}

.message-button-ok {
  cursor: pointer;
  display: flex;
  padding: 0.25rem;
  background-color: cornsilk;
  border: 0.25rem lightgreen;
  border-style: solid;
  border-radius: 10px;
}

.message-button-cancel {
  cursor: pointer;
  display: flex;
  vertical-align: middle;
  padding: 0.25rem;
  background-color: cornsilk;
  border: 0.25rem darkred;
  border-style: solid;
  border-radius: 10px;
}

.message-close:hover,
.message-close:focus {
  color: rgb(199, 2, 2);
  text-decoration: none;
  cursor: pointer;
}

